refactor: update design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <title>Get Recipe</title>
     <script src="https://kit.fontawesome.com/4daff5ca84.js" crossorigin="anonymous"></script>
   </head>
-  <body class="bg-gradient-to-b from-red-900 ">
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
